// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CitationView renders  component with correct props 1`] = `
<CitationView
  citationClass="citationClassName"
  prefix=" "
  suffix=":"
>
  <span
    className="citationClassName"
  >
     
    Some text
    :
  </span>
</CitationView>
`;

exports[`CitationView renders  component with correct suffix 1`] = `
<CitationView
  citationClass="citationClassName"
  prefix=" "
  suffix="."
>
  <span
    className="citationClassName"
  >
     
    Some text.
  </span>
</CitationView>
`;

exports[`CitationView renders  component with empty span 1`] = `
<span
  className=""
/>
`;
